vlib/v/checker/tests/unknown_struct_field_suggest_name.vv
struct Points {
	xxxx []int
	yyyy []int
	zzzz []int
}

fn main() {
	p := Points{[1], [2], [3]}
	println('p: ${p}')
	for x in p.xxxa {
		println('x: ${x}')
	}
}
